--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 
               </div>
 
-              <button type="submit" class="btn btn-success mt-3">Kirim</button>
+              <button type="submit" class="btn btn-primary mt-3">Kirim</button>
             </form>
           </div>
         </div>
