--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-md-8">
-          <div class="alert alert-warning alert-dismissible fade show d-none my-alert" role="alert">
+          <div class="alert alert-Success alert-dismissible fade show d-none my-alert" role="alert">
             <strong>Terima Kasih</strong> pesan anda sudah kami terima
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
           </div>
